/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.Edi.Requests";

message RequestAggregatedMeasureData {
  optional string MessageId = 1;
  optional string SenderId = 2;
  optional string SenderRole = 3;
  optional string ReceiverId = 4;
  optional string ReceiverRole = 5;
  optional string BusinessReason = 6;
  optional string AuthenticatedUser = 7;
  optional string AuthenticatedUserRole = 8;
  optional string MessageType = 9;
  repeated Serie Series = 10;
}

message Serie {
  optional string Id = 1;
  optional string MarketEvaluationPointType = 2;
  optional string MarketEvaluationSettlementMethod = 3;
  optional string StartDateAndOrTimeDateTime = 4;
  optional string EndDateAndOrTimeDateTime = 5;
  optional string MeteringGridAreaDomainId = 6;
  optional string EnergySupplierMarketParticipantId = 7;
  optional string BalanceResponsiblePartyMarketParticipantId = 8;
}